update solution