@@ -3,10 +3,7 @@ package com.javarush.task.task15.task1527;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /* 
 Парсер реквестов
@@ -23,12 +20,12 @@ public class Solution {
 
         String secondPart = url.substring(url.indexOf('?') + 1);
 
-        params = List.of(secondPart.split("&"));
+        params = Arrays.asList(secondPart.split("&"));
         for (String param : params) {
             if (param.indexOf('=') >= 0)
-                paramsList.add(List.of(param.split("=")));
+                paramsList.add(Arrays.asList(param.split("=")));
             else
-                paramsList.add(List.of(param));
+                paramsList.add(Arrays.asList(param));
         }
         for (List<String> item : paramsList) {
                 String value = item.get(0);
@@ -45,15 +42,11 @@ public class Solution {
                 alert(objVal);
             }
         }
-
-
-
     }
 
     public static void alert(double value) {
         System.out.println("double: " + value);
     }
-
     public static void alert(String value) {
         System.out.println("String: " + value);
     }
